@@ -816,12 +816,6 @@ sub addTypedRow
         $self->addedRowNotify($newRow);
         $self->_notifyManager('add', $newRow);
 
-        # check if there are files to delete if revoked
-        my $filesToRemove =   $self->filesPathsForRow($newRow);
-        foreach my $file (@{  $filesToRemove }) {
-            $self->{confmodule}->addFileToRemoveIfRevoked($file);
-        }
-
         $self->_commitTransaction();
     } catch ($e) {
         $self->_rollbackTransaction();
@@ -1073,12 +1067,6 @@ sub removeRow
         $self->_checkRowExist($id, '');
         my $row = $self->row($id);
         $self->validateRowRemoval($row, $force);
-
-        # check if there are files to delete
-        my $filesToRemove =   $self->filesPathsForRow($row);
-        foreach my $file (@{  $filesToRemove }) {
-            $self->{confmodule}->addFileToRemoveIfCommitted($file);
-        }
 
         $self->_removeRow($id);
 
@@ -3000,66 +2988,6 @@ sub customActionClickedJS
                     $page);
 }
 
-# Method: backupFiles
-#
-#   Make an actual configuration backup of all the files contained in the
-#   datatable and its submodels. This backup will used to discard changes if
-#   needed
-sub backupFiles
-{
-    my ($self) = @_;
-
-    # XXX Disable backupFiles as this is messing with the directories
-    # and making eBox fail
-    return;
-
-    $self->_hasFileFields() or
-        return;
-
-    foreach my $id (@{ $self->ids() }) {
-        $self->row($id)->backupFiles();
-    }
-}
-
-# Method: restoreFiles
-#
-#  Restores the actual configuration backup of files, thus discarding last
-#  changes in files
-sub restoreFiles
-{
-    my ($self) = @_;
-
-    # FIXME: Is this no longer needed?
-    # XXX Disable restoreFiles as this is messing with the directories
-    # and making eBox fail
-    return;
-
-    $self->_hasFileFields() or
-        return;
-
-    foreach my $row (@{ $self->ids() } ) {
-        $self->row($row)->restoreFiles();
-    }
-}
-
-#  Method: _hasFileFields
-#
-# Returns:
-#  wether the types in the tableDescription could manage any file
-sub _hasFileFields
-{
-    my ($self) = @_;
-
-    my $tableDesc = $self->table()->{tableDescription};
-    foreach my $header  (  @{ $tableDesc } ) {
-        if ($header->can('filesPaths')) {
-            return 1;
-        }
-    }
-
-    return 0;
-}
-
 # Method: reloadTable
 #
 #     This method is intended to reload the information from the table
@@ -4422,36 +4350,6 @@ sub keywords
         push(@words, _parse_words($field->help()));
     }
     return \@words;
-}
-
-# Method: filesPaths
-#
-#   Returns:
-#     the paths of the files managed by the datatable and its submodels
-sub filesPaths
-{
-    my ($self) = @_;
-
-    $self->_hasFileFields() or
-        return [];
-
-    my @files = map {
-        @{ $self->row($_)->filesPaths() }
-    } @{ $self->ids() };
-
-    return \@files;
-}
-
-#  Method: filesPathsForRow
-#
-#   returns the file paths for a given row.
-#
-#   Warnings:
-#   we need to do this bz we cannot override row's methods for specific models!
-sub filesPathsForRow
-{
-    my ($self, $row) = @_;
-    return $row->filesPaths();
 }
 
 sub _beginTransaction
