@@ -694,55 +694,6 @@ sub matchFilter
     return undef;
 }
 
-# Method: filesPaths
-#
-#   Returns:
-#     the paths of the files managed by the row and its submodels
-sub filesPaths
-{
-    my ($self) = @_;
-    my @files;
-
-    foreach my $element ( @{ $self->elements() } ) {
-        if ($element->can('filesPaths')) {
-            push @files, @{ $element->filesPaths() };
-        }
-    }
-
-    return \@files;
-}
-
-# Method: backupFiles
-#
-#   Make an actual configuration backup of all the files contained in the
-#   row and its submodels. This backup will used to discard cahnges if
-#   needed
-sub backupFiles
-{
-    my ($self) = @_;
-
-    foreach my $element ( @{ $self->elements() } ) {
-        if ($element->can('backupFiles')) {
-            $element->backupFiles();
-        }
-    }
-}
-
-# Method: restoreFiles
-#
-#  Restores the actual configuration backup of files, thus discarding last
-#  changes in files
-sub restoreFiles
-{
-    my ($self) = @_;
-
-    foreach my $element (@{$self->elements()}) {
-        if ($element->can('restoreFiles')) {
-            $element->restoreFiles();
-        }
-    }
-}
-
 # Method: cloneSubModelsFrom
 #
 #  Auxiliary method for EBox::Model::DataTable to help it to clone the submodels
