@@ -166,8 +166,6 @@ sub aroundDumpConfig
     # dump also state, it will not be restored as default
     $self->_dump_state_to_file($dir);
 
-    $self->backupFilesInArchive($dir);
-
     $self->dumpConfig($dir, @options);
 }
 
@@ -213,8 +211,6 @@ sub revokeConfig
 
     $global->modIsChanged($self->name) or return;
 
-    $self->modelsRevokeConfig();
-
 # Disabled until method si reimplemented
 #    $self->_revokeConfigFiles();
 
@@ -230,8 +226,6 @@ sub _saveConfig
         throw EBox::Exceptions::Internal("tried to save a read-only"
                                          . " module: " . $self->name() . "\n");
     }
-
-    $self->modelsSaveConfig();
 
     $self->_copy_to_ro();
 
@@ -809,87 +803,34 @@ sub _addFileToList
 #    $self->_clearFilesToRemoveLists();
 #}
 
-# Method: modelsSaveConfig
-#
-#    Method called when the conifguraiton of a modules is saved
-sub modelsSaveConfig
-{
-    my ($self) = @_;
 
-#    $self->modelsBackupFiles();
-}
-
-# Method: modelsRevokeConfig
-#
-#    Method called when the conifguraiton of a modules is revoked
-sub modelsRevokeConfig
-{
-    my ($self) = @_;
-
-#    $self->modelsRestoreFiles();
-}
-
-# Method: backupFiles
-#
-#   Make an actual configuration backup of all the files contained in the
-#   models
-sub modelsBackupFiles
-{
-    my ($self) = @_;
-
-#    foreach my $model ( @{ $self->models() } ) {
-#        if ($model->can('backupFiles')) {
-#            $model->backupFiles();
-#        }
-#    }
-}
-
-# Method: restoreFiles
-#
-#  Restores the actual configuration backup of files in the models , thus
-#  discarding the lasts changes in files
-sub modelsRestoreFiles
-{
-    my ($self) = @_;
-
-#    foreach my $model ( @{ $self->models() } ) {
-#        if ($model->can('restoreFiles')) {
-#            $model->restoreFiles();
-#        }
-#    }
-}
 
 sub _filesArchive
 {
     my ($self, $dir) = @_;
-    return "$dir/modelsFiles.tar";
+    return "$dir/moduleFiles.tar";
 }
 
-# Method: backupFilesInArchive
+# Method: backupFilesFromModels
 #
-#  Backup all the modules' files in a compressed archive in the given dir
+#  Backup all the given models' files in a compressed archive in the given dir
 #  This is used to create backups
 #
 #   Parameters:
 #   dir - directory where the archive will be stored
-sub backupFilesInArchive
+#   files
+sub backupFilesToArchive
 {
-    my ($self, $dir) = @_;
+    my ($self, $dir, $files) = @_;
 
-    my @filesToBackup;
-    foreach my $model ( @{ $self->models() } ) {
-        if ($model->can('filesPaths')) {
-            push @filesToBackup, @{ $model->filesPaths() };
-        }
-    }
-
+    my @filesToBackup = @{ $files };
     @filesToBackup or
         return;
 
     my $archive = $self->_filesArchive($dir);
 
     my $firstFile  = shift @filesToBackup;
-    my $archiveCmd = "tar  -C / -cf $archive --atime-preserve --absolute-names --preserve-permissions --preserve-order --same-owner '$firstFile'";
+    my $archiveCmd = "tar  -C / -cf $archive --atime-preserve --absolute-names --preserve-permissions --same-owner '$firstFile'";
     EBox::Sudo::root($archiveCmd);
 
     # we append the files one per one bz we don't want to overflow the command
@@ -903,7 +844,7 @@ sub backupFilesInArchive
 
 # Method: restoreFilesFromArchive
 #
-#  Restore all the module's file from the compressed archive in the given dir
+#  Restore all the files from the  tar archive in backup dir
 #  This is used to restore backups
 #
 #   Parameters:
